October small improvements

--- a/Refs_RSeqFlow.bib
+++ b/Refs_RSeqFlow.bib
@@ -1,12 +1,34 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for M. Gonzalo Claros at 2022-08-01 12:43:43 +0200 
+%% Created for M. Gonzalo Claros at 2022-10-20 17:02:55 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Kleinberg1999,
+	abstract = {The network structure of a hyperlinked environment can be a rich source of information about the content of the environment, provided we have effective means for understanding it. We develop a set of algorithmic tools for extracting information from the link structures of such environments, and report on experiments that demonstrate their effectiveness in a variety of context on the World Wide Web. The central issue we address within our framework is the distillation of broad search topics, through the discovery of ``authorative'' information sources on such topics. We propose and test an algorithmic formulation of the notion of authority, based on the relationship between a set of relevant authoritative pages and the set of ``hub pages'' that join them together in the link structure. Our formulation has connections to the eigenvectors of certain matrices associated with the link graph; these connections in turn motivate additional heuristrics for link-based analysis.},
+	address = {New York, NY, USA},
+	author = {Kleinberg, Jon M.},
+	date-added = {2022-10-20 17:02:44 +0200},
+	date-modified = {2022-10-20 17:02:52 +0200},
+	doi = {10.1145/324133.324140},
+	issn = {0004-5411},
+	issue_date = {Sept. 1999},
+	journal = {J. ACM},
+	keywords = {World Wide Web, link analysis, graph algorithms, hypertext structure},
+	month = {sep},
+	number = {5},
+	numpages = {29},
+	pages = {604--632},
+	publisher = {Association for Computing Machinery},
+	title = {Authoritative Sources in a Hyperlinked Environment},
+	url = {https://doi.org/10.1145/324133.324140},
+	volume = {46},
+	year = {1999},
+	bdsk-url-1 = {https://doi.org/10.1145/324133.324140}}
 
 @incollection{FIONDA2019,
 	abstract = {Biological processes determining cell behavior are defined by the complex interactions among all molecules. Hence, in order to understand the function of the cell, both on its own and when surrounded by other cells, key tasks are the cataloging of all molecules and their interactions, and the analysis of the biological processes they generate. To this end, biological processes are often represented in the form of networks and the modeling, analysis and visualization of such networks are essential tasks in bioinformatics and computational biology. This article introduces the different types of biological networks.},
@@ -904,14 +926,14 @@ CONCLUSIONS: The best analysis approach to our data was to normalize the read co
 @article{Wasserstein2019,
 	author = {Ronald L. Wasserstein and Allen L. Schirm and Nicole A. Lazar},
 	date-added = {2022-03-22 18:34:40 +0100},
-	date-modified = {2022-03-22 18:34:56 +0100},
+	date-modified = {2022-09-13 15:53:30 +0200},
 	doi = {10.1080/00031305.2019.1583913},
 	eprint = {https://doi.org/10.1080/00031305.2019.1583913},
 	journal = {The American Statistician},
 	number = {sup1},
 	pages = {1-19},
 	publisher = {Taylor & Francis},
-	title = {Moving to a World Beyond ``p < 0.05''},
+	title = {Moving to a World Beyond ``p < 0.05''},
 	url = {https://doi.org/10.1080/00031305.2019.1583913},
 	volume = {73},
 	year = {2019},
